--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="file">Hospital</string>
     <string name="file_extension">csv</string>
     <string name="error_msg">Sorry could not load file</string>
+    <string name="error_reading_file_txt">Error reading CSV file!</string>
+    <string name="error_closing_file_txt">Error closing file!</string>
 </resources>
